--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Apps4.pro Support
 description: This is sample page.
-baseurl: "" # the subpath of your site, e.g. /blog
+url:""
+baseurl: "/knowledgeBase" # the subpath of your site, e.g. /blog
 
 port: 4006
 navbar-links:
