--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 title: Apps4.pro Support
 description: This is sample page.
 
-baseurl: "/knowledgeBase" # the subpath of your site, e.g. /blog
-url: "AjitaSteffiaLiz.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
 
 port: 4006
 navbar-links:
